# Fixed-Hessian-Logistic-Regression

./: .gitignore  Fixed Hessian Logistic Regression.sln  README.md
Fixed Hessian Logistic Regression/: CMakeCache.txt  CMakeLists.txt  Fixed Hessian Logistic Regression.vcxproj  Fixed Hessian Logistic Regression.vcxproj.filters  Fixed Hessian.cpp  GD.cpp  Makefile  NAG.cpp  cmake_install.cmake  cpp  databasetools.cpp  databasetools.h  iDASH2017.cpp  idash.txt  logregtools.cpp  logregtools.h  main  main.cpp  main.h  plaintextLR.cpp
